Add fire base login/register

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,15 @@
     <!-- used in the notification -->
     <string name="notification_text">This is your reminder!</string>
 
-
-
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="google_sign_in">Sign in with Google</string>
+    <string name="default_web_client_id">615936797641-gs232gji82lhhfh12kvnf81j1ccsj3sv.apps.googleusercontent.com</string>
+    <string name="enter_email">Enter Email</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="enter_interval_in_minutes">Enter interval in minutes</string>
 
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
@@ -60,6 +67,5 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
-
 
 </resources>
