--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">ReminderApp</string>
+    <string name="open">Open Drawer</string>
+    <string name="close">Close Drawer</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -10,6 +12,11 @@
     <string name="set_reminder">Set Reminder</string>
     <string name="start_reminder">Start Reminder</string>
     <string name="stop_reminder">Stop Reminder</string>
+    <string name="settings">Settings</string>
+    <string name="user_image">User Image</string>
+    <string name="user_name">User Name</string>
+    <string name="user_email">email@example.com</string>
+
 
     <!-- used in MainActivity toasts -->
     <string name="please_enter_interval">Please enter interval in minutes</string>
